--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "com.aimlab.science",
-  "displayName": "Aim Lab Science",
-  "description": "The science aspect of Aim Lab.",
-  "author": "Aim Lab",
+  "name": "com.gazuntype.graphql",
+  "displayName": "GraphQL Client",
+  "description": "A Unity GraphQL Client.",
+  "author": "Gazuntype",
   "contributors": [{
-    "name": "Jason Clemente"
+    "name": "Tade Ajiboye"
   }],
   "version": "1.0.0",
   "unity": "2019.3",
   "keywords": [
-    "aimlab",
-    "science",
-    "tasks",
-    "events"
+    "graphql",
+    "facebook",
+    "backend",
+    "schema"
   ],
   "repository": {
-    "url": "git+https://github.com/statespacelabs/AimLabScience.git",
+    "url": "git+https://github.com/statespacelabs/GraphQLUnityPlugin.git",
     "type": "git"
   }
 }
